--- a/spec.html
+++ b/spec.html
@@ -36233,7 +36233,9 @@ THH:mm:ss.sss
                     1. If _sj_ equals _s_ and the _j_<sup>th</sup> capture of _R_ is not *undefined*, set _isMatchedElsewhere_ to *true*.
                 1. If _isMatchedElsewhere_ is *false*, then
                   1. Perform ! CreateDataPropertyOrThrow(_groups_, _s_, _capturedValue_).
-                1. Append _s_ to _groupNames_.
+                  1. Append _s_ to _groupNames_.
+                1. Else,
+                  1. Append *undefined* to _groupNames_.
               1. Else,
                 1. Append *undefined* to _groupNames_.
             1. If _hasIndices_ is *true*, then
